parser/src/parser/expressions/snapshots/parser__parser__expressions__binary__tests__parse_assign_bin_expr_.snap
---
source: parser/src/parser/expressions/binary.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 41)
  FN_DEF@[0; 41)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 41)
      BLOCK@[10; 41)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 15)
          BIN_EXPR@[11; 15)
            IDENT_EXPR@[11; 12)
              NAME@[11; 12)
                IDENT@[11; 12) "x"
            EQ@[12; 13) "="
            LITERAL@[13; 15)
              INT_NUMBER@[13; 15) "10"
        SEMI@[15; 16) ";"
        EXPR_STMT@[16; 21)
          BIN_EXPR@[16; 21)
            IDENT_EXPR@[16; 17)
              NAME@[16; 17)
                IDENT@[16; 17) "x"
            PLUSEQ@[17; 19) "+="
            LITERAL@[19; 21)
              INT_NUMBER@[19; 21) "10"
        SEMI@[21; 22) ";"
        EXPR_STMT@[22; 27)
          BIN_EXPR@[22; 27)
            IDENT_EXPR@[22; 23)
              NAME@[22; 23)
                IDENT@[22; 23) "x"
            MINUSEQ@[23; 25) "-="
            LITERAL@[25; 27)
              INT_NUMBER@[25; 27) "10"
        SEMI@[27; 28) ";"
        EXPR_STMT@[28; 33)
          BIN_EXPR@[28; 33)
            IDENT_EXPR@[28; 29)
              NAME@[28; 29)
                IDENT@[28; 29) "x"
            SLASHEQ@[29; 31) "/="
            LITERAL@[31; 33)
              INT_NUMBER@[31; 33) "10"
        SEMI@[33; 34) ";"
        EXPR_STMT@[34; 39)
          BIN_EXPR@[34; 39)
            IDENT_EXPR@[34; 35)
              NAME@[34; 35)
                IDENT@[34; 35) "x"
            STAREQ@[35; 37) "*="
            LITERAL@[37; 39)
              INT_NUMBER@[37; 39) "10"
        SEMI@[39; 40) ";"
        R_CURLY@[40; 41) "}"

