parser/src/parser/expressions/snapshots/parser__parser__expressions__binary__tests__parse_bin_expr.snap
---
source: parser/src/parser/expressions/binary.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 16)
  FN_DEF@[0; 16)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 16)
      BLOCK@[10; 16)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 14)
          BIN_EXPR@[11; 14)
            LITERAL@[11; 12)
              INT_NUMBER@[11; 12) "1"
            PLUS@[12; 13) "+"
            LITERAL@[13; 14)
              INT_NUMBER@[13; 14) "1"
        SEMI@[14; 15) ";"
        R_CURLY@[15; 16) "}"

