parser/src/parser/expressions/snapshots/parser__parser__expressions__binary__tests__parse_chained_assign_bin_expr_.snap
---
source: parser/src/parser/expressions/binary.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 24)
  FN_DEF@[0; 24)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 24)
      BLOCK@[10; 24)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 22)
          BIN_EXPR@[11; 22)
            BIN_EXPR@[11; 20)
              BIN_EXPR@[11; 18)
                BIN_EXPR@[11; 15)
                  IDENT_EXPR@[11; 12)
                    NAME@[11; 12)
                      IDENT@[11; 12) "x"
                  EQ@[12; 13) "="
                  LITERAL@[13; 15)
                    INT_NUMBER@[13; 15) "10"
                EQ@[15; 16) "="
                LITERAL@[16; 18)
                  INT_NUMBER@[16; 18) "10"
              EQ@[18; 19) "="
              LITERAL@[19; 20)
                INT_NUMBER@[19; 20) "2"
            EQ@[20; 21) "="
            LITERAL@[21; 22)
              INT_NUMBER@[21; 22) "3"
        SEMI@[22; 23) ";"
        R_CURLY@[23; 24) "}"

